<resources>
    <string name="app_name">eBazar</string>
    <string name="esewa_logo">Esewa Logo</string>
    <string name="market">Market</string>
    <string name="notifications">Notifications</string>
    <string name="option">Option</string>
    <string name="john">Good morning John, Everything you will discover here</string>
    <string name="searchbar">Search Bar</string>
    <string name="searching">What are you searching for?</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="categories">Categories</string>
    <string name="images">Images</string>
    <string name="categories_images">Categories Images</string>
    <string name="mobile">Mobile</string>
    <string name="featured_products">Featured Products</string>
    <string name="products">Products</string>
    <string name="product_name">Product Name</string>
    <string name="brand">Brand</string>
    <string name="rs">Rs.</string>
    <string name="_8200">8200</string>
    <string name="add_sign">Add Sign</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="most_popular">Most Popular</string>
    <string name="hot_deals">Hot Deals of The Day</string>
    <string name="popular_brand">Popular Brand</string>
    <string name="loading">LOADING...</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="shop">Shop</string>
    <string name="shop_icon">Shop Icon</string>
    <string name="cart_icon">Cart Icon</string>
    <string name="cart">Cart</string>
    <string name="favourite_icon">Favourite Icon</string>
    <string name="favourite">Favourite</string>
    <string name="more_icon">More Icon</string>
    <string name="more">More</string>
    <string name="jacket_in_nylon">Jacket In Nylon</string>
    <string name="rs_2500">Rs.2500</string>
    <string name="availability_in_stock">Availability : In Stock</string>
    <string name="description">Description</string>
    <string name="product_description">Product description</string>
    <string name="back_button">Back Button</string>
    <string name="product_price">Rs. %1$.2f</string>
    <string name="checkmark_icon">Checkmark_Icon</string>
    <string name="s">S</string>
    <string name="select_size">Select Size</string>
    <string name="select_color">Select Color</string>
    <string name="view_more">VIEW MORE</string>
    <string name="_1">01</string>
    <string name="minus_sign">Minus Sign</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="subtitle">Your friendly local and global market companion</string>
    <string name="mairea_doe">Mairea Doe</string>
    <string name="_997_9841235678">+997-9841235678</string>
    <string name="view_profile">VIEW PROFILE</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="my_profile">My Profile</string>
    <string name="my_products">My Products</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="my_order">My Order</string>
    <string name="my_return">My Return</string>
    <string name="my_cancellation">My Cancellation</string>
    <string name="reward_promotions"><![CDATA[Reward & Promotions]]></string>
    <string name="reward_points">Rewards Points</string>
    <string name="apply_promocode">Apply Promocode</string>
    <string name="daily_buy_bonus">Daily Buy Bonus</string>
    <string name="help">Help</string>
    <string name="about_us">About us</string>
    <string name="customer_support">Customer Support</string>
    <string name="faqs">FAQs</string>
    <string name="legal_terms">Legal Terms</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policies">Privacy Policies</string>
    <string name="all_legal_policies">All Legal Policies</string>
    <string name="email_or_phone_number">EMAIL OR PHONE NUMBER</string>
    <string name="enter_your_email_or_phone">Enter your email or phone</string>
    <string name="password">PASSWORD</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="login_to_market">LOGIN TO MARKET</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_welcome_to_ebazar">Hello, Welcome to eBazar</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="register_account">REGISTER ACCOUNT</string>
    <string name="create_robust_password">Create robust password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_agree_to_the_esewa_market">I agree to the eSewa Market Terms &amp; Conditions </string>
    <string name="rs_19_500_00">Rs.19,500.00</string>
    <string name="items_0">Items (0)</string>
    <string name="checkout_total">Checkout Total</string>
    <string name="rs_0_00">Rs. 0.00</string>
    <string name="checkout">CHECKOUT</string>
    <string name="my_cart">My Cart</string>
    <string name="items_count">Items (%1$d)</string>
    <string name="empty_cart">Empty cart</string>
    <string name="no_items_added_to_the_cart_yet">No items added to the cart yet</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="delete_from_cart">Delete from cart</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>