<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="48dp"
        android:paddingBottom="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/delete_from_cart"
            android:textColor="#3A3B4C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/are_you_sure_you_want_to_delete_this_item"
            android:textColor="#717282"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="16sp"
                app:backgroundTint="#555770"
                app:cornerRadius="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="16sp"
                app:backgroundTint="#2ABB00"
                app:cornerRadius="16dp" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>